overflow BUG

--- a/src/assets/styles/index.module.scss
+++ b/src/assets/styles/index.module.scss
@@ -2,7 +2,7 @@
 
 .main {
   width: 100%;
-  height: 100vh;
+  // height: 100vh;
   max-height: 1200px;
   position: absolute;
   top: 0px;
